@@ -5,7 +5,7 @@
 ## file, You can obtain one at http://mozilla.org/MPL/2.0/.
 ##
 
-AC_INIT([libxc],[4.1.1],[libxc@tddft.org],[libxc],[http://www.tddft.org/programs/Libxc])
+AC_INIT([libxc],[4.2.0],[libxc@tddft.org],[libxc],[http://www.tddft.org/programs/Libxc])
 AC_CONFIG_SRCDIR([src/xc.h])
 AM_INIT_AUTOMAKE
 
@@ -36,6 +36,7 @@ AC_CONFIG_MACRO_DIR([m4])
 # libxc-4.0.5   5:5:0
 # libxc-4.1.0   6:0:1
 # libxc-4.1.1   6:1:1
+# libxc-4.2.0   7:0:2
 # 
 # Note that libtool versioning was not used prior to libxc-2.0.
 # Because of this, we will start counting at 1.
@@ -52,9 +53,9 @@ AC_CONFIG_MACRO_DIR([m4])
 # interfaces have been removed. removal has precedence over adding,
 # so set to 0 if both happened.
 
-XC_CURRENT=6
-XC_REVISION=1
-XC_AGE=1
+XC_CURRENT=7
+XC_REVISION=0
+XC_AGE=2
 
 XC_LT_VERSION="${XC_CURRENT}:${XC_REVISION}:${XC_AGE}"
 AC_SUBST(XC_LT_VERSION)
